# gst-shark

./: meson.build
plugins/tracers/: meson.build
